// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatisticsCard component test snapshot test should match snapshot with default props 1`] = `
<Card
  className="dashCard"
>
  <p>
    Test Title
  </p>
</Card>
`;

exports[`StatisticsCard component test snapshot test should match snapshot with isActive true 1`] = `
<Card
  className="dashCard active"
>
  <p>
    Test Title
  </p>
</Card>
`;
